update kegg plots

--- a/analysis/enrichment_analysis.ipynb
+++ b/analysis/enrichment_analysis.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -238,14 +238,14 @@
     "  go_simplified_plot <- ea_plot(go_simplified_results, y_ax_limit=150, top = 15)\n",
     "  ggsave(paste0(folder_name, \"/go_simplified_plot.png\"), go_simplified_plot, height = h, width = w, dpi = 320)\n",
     "\n",
-    "  kegg_plot <- ea_plot(kegg_results, y_ax_limit=15, top = 15)\n",
-    "  ggsave(paste0(folder_name, \"/kegg_plot.png\"), kegg_plot, height = h, width = w, dpi = 320)\n",
+    "  kegg_plot <- ea_plot(kegg_results, y_ax_limit=20, top = 15)\n",
+    "  ggsave(paste0(folder_name, \"/kegg_plot.png\"), kegg_plot, height = h, width = w*1.25, dpi = 320)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -256,12 +256,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "'select()' returned 1:1 mapping between keys and columns\n",
-      "\n",
-      "Reading KEGG annotation online: \"https://rest.kegg.jp/link/hsa/pathway\"...\n",
-      "\n",
-      "Reading KEGG annotation online: \"https://rest.kegg.jp/list/pathway/hsa\"...\n",
-      "\n",
       "'select()' returned 1:1 mapping between keys and columns\n",
       "\n"
      ]
@@ -274,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -316,22 +310,7 @@
      "output_type": "stream",
      "text": [
       " [1] \"ONTOLOGY\"    \"ID\"          \"Description\" \"GeneRatio\"   \"BgRatio\"    \n",
-      " [6] \"pvalue\"      \"p.adjust\"    \"qvalue\"      \"geneID\"      \"Count\"      \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "“\u001b[1m\u001b[22mThe `size` argument of `element_line()` is deprecated as of ggplot2 3.4.0.\n",
-      "\u001b[36mℹ\u001b[39m Please use the `linewidth` argument instead.”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " [6] \"pvalue\"      \"p.adjust\"    \"qvalue\"      \"geneID\"      \"Count\"      \n",
       " [1] \"ONTOLOGY\"    \"ID\"          \"Description\" \"GeneRatio\"   \"BgRatio\"    \n",
       " [6] \"pvalue\"      \"p.adjust\"    \"qvalue\"      \"geneID\"      \"Count\"      \n",
       "[1] \"ID\"          \"Description\" \"GeneRatio\"   \"BgRatio\"     \"pvalue\"     \n",
@@ -342,8 +321,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning message:\n",
-      "“\u001b[1m\u001b[22mRemoved 1 rows containing missing values (`position_stack()`).”\n",
       "\u001b[1mRows: \u001b[22m\u001b[34m943\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m10\u001b[39m\n",
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
       "\u001b[1mDelimiter:\u001b[22m \"\\t\"\n",
