update enriched pathways barplot font color

--- a/analysis/enrichment_analysis.ipynb
+++ b/analysis/enrichment_analysis.ipynb
@@ -198,7 +198,7 @@
     "\n",
     "# Function to generate enrichment plot\n",
     "ea_plot <- function(df, y_ax_limit=100, title = \"\", top = 15, label_size = 16, qval_thresh = 0.05, type_filter = \"\") {\n",
-    "  print(colnames(df))  # Add this line to print column names\n",
+    "  print(colnames(df))\n",
     "  \n",
     "  df <- df %>%\n",
     "    dplyr::filter(qvalue < qval_thresh) %>%\n",
@@ -214,15 +214,15 @@
     "      text = element_text(size = 12, family = \"ArialMT\"),\n",
     "      axis.title.y = element_blank(),\n",
     "      axis.ticks.y = element_blank(),\n",
-    "      axis.text.x = element_text(color = \"#333333\"),  # Make axis labels darker\n",
-    "      axis.text.y = element_text(color = \"#333333\"),  # Make axis labels darker\n",
-    "      axis.line = element_line(size = 0.8, color = \"black\"),  # Increase size for thicker lines\n",
-    "      axis.ticks = element_line(size = 0.8),  # Increase size for thicker ticks\n",
-    "      axis.ticks.length = unit(0.2, \"cm\"),  # Increase size for longer ticks\n",
+    "      axis.text.x = element_text(color = \"#4d4d4d\"),\n",
+    "      axis.text.y = element_text(color = \"#4d4d4d\"),\n",
+    "      axis.line = element_line(size = 0.8, color = \"black\"),\n",
+    "      axis.ticks = element_line(size = 0.8),\n",
+    "      axis.ticks.length = unit(0.2, \"cm\"),\n",
     "    ) +\n",
     "    labs(y = bquote(paste(-log[10], italic(q), \"-value\"))) +\n",
     "    coord_flip() +\n",
-    "    scale_y_continuous(limits = c(0, y_ax_limit))  # Set the range of the x-axis (which is originally the y-axis)\n",
+    "    scale_y_continuous(limits = c(0, y_ax_limit))\n",
     "}\n",
     "\n",
     "create_barplots <- function(folder_name, h, w) {\n",
