change hold-out test set to GSE6364

--- a/data_prep/prep.ipynb
+++ b/data_prep/prep.ipynb
@@ -273,9 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8194"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Copy coldata into data directory\n",
     "original_unified_coldata_path = METADATA_DIR / \"coldata.tsv\"\n",
@@ -285,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -369,13 +380,13 @@
        "CompletedProcess(args=['Rscript', '/media/data/lab/gene/characterizing-endometriosis-transcriptome/data_prep/batch_correction.r', '/media/data/lab/gene/characterizing-endometriosis-transcriptome/data/all/all_phases_all_genes_counts.tsv', '/media/data/lab/gene/characterizing-endometriosis-transcriptome/data/all/all_phases_coldata.tsv'], returncode=0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Batch correction\n",
+    "# Batch correction (reference batch is GSE4888)\n",
     "\n",
     "reference_level = \"healthy\"\n",
     "contrast_level = \"endometriosis\"\n",
@@ -388,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,29 +486,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Set aside 45 samples for validation (24 healthy, 21 endometriosis) and separate fit/test sets.\n",
-    "\n",
-    "The test set contains the 45 validation samples, and the fit set contains all other samples.\n",
+    "Set aside the 37 samples in GSE6364 for validation (21 healthy, 16 endometriosis) and separate train/test.\n",
     "\"\"\"\n",
     "\n",
-    "n_healthy = 24\n",
-    "n_endometriosis = 21\n",
-    "\n",
     "coldata_df = pd.read_csv(unified_coldata_path, sep='\\t')\n",
-    "\n",
-    "healthy_samples = coldata_df[coldata_df['condition'] == 'healthy']['sample_name'].tolist()\n",
-    "endometriosis_samples = coldata_df[coldata_df['condition'] == 'endometriosis']['sample_name'].tolist()\n",
-    "\n",
-    "# Choose 24 healthy and 21 endometriosis samples from the end of the list\n",
-    "validation_samples = healthy_samples[-n_healthy:] + endometriosis_samples[-n_endometriosis:]\n",
+    "validation_samples = coldata_df[coldata_df['batch'] == 2]['sample_name'].tolist()\n",
     "\n",
     "# Remove validation samples from the list of all samples\n",
-    "fit_samples = healthy_samples[:-n_healthy] + endometriosis_samples[:-n_endometriosis]\n",
+    "fit_samples = coldata_df[coldata_df['batch'] != 2]['sample_name'].tolist()\n",
     "\n",
     "samples = {\n",
     "    \"fit\": fit_samples,\n",
