--- a/analysis/enrichment_analysis.ipynb
+++ b/analysis/enrichment_analysis.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -283,7 +283,13 @@
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
       "\u001b[1mDelimiter:\u001b[22m \"\\t\"\n",
       "\u001b[31mchr\u001b[39m (6): ONTOLOGY, ID, Description, GeneRatio, BgRatio, geneID\n",
-      "\u001b[32mdbl\u001b[39m (4): pvalue, p.adjust, qvalue, Count\n",
+      "\u001b[32mdbl\u001b[39m (4): pvalue, p.adjust, qvalue, Count\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
       "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
       "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n",
