add stagewise demg analysis for after enrichment analysis

--- a/analysis/enrichment_analysis.ipynb
+++ b/analysis/enrichment_analysis.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -165,6 +165,8 @@
    },
    "outputs": [],
    "source": [
+    "### Functions for enrichment analysis\n",
+    "\n",
     "get_enriched_pathways <- function(input_dir, output_dir) {\n",
     "  gene_list_fp <- paste0(input_dir, \"union_demg.txt\")\n",
     "  gene_list <- scan(gene_list_fp, what = \"\", sep = \"\\n\")\n",
@@ -199,14 +201,14 @@
     "# Function to generate enrichment plot\n",
     "ea_plot <- function(df, y_ax_limit=100, title = \"\", top = 15, label_size = 16, qval_thresh = 0.05, type_filter = \"\") {\n",
     "  print(colnames(df))\n",
-    "  \n",
+    "\n",
     "  df <- df %>%\n",
     "    dplyr::filter(qvalue < qval_thresh) %>%\n",
     "    {if (type_filter != \"\") dplyr::filter(., str_detect(Description, type_filter)) else . } %>%\n",
     "    dplyr::top_n(n = -top, wt = qvalue) %>%\n",
     "    dplyr::arrange(-log10(qvalue)) %>%\n",
     "    dplyr::mutate(type_fact = factor(Description, levels = unique(Description)))  # Use unique() to remove duplicates\n",
-    "  \n",
+    "\n",
     "  ggplot(df) +\n",
     "    geom_bar(aes(x = type_fact, y = -log10(qvalue)), stat = \"identity\") +\n",
     "    theme_classic() +\n",
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -257,18 +259,25 @@
      "output_type": "stream",
      "text": [
       "'select()' returned 1:1 mapping between keys and columns\n",
+      "\n",
+      "Reading KEGG annotation online: \"https://rest.kegg.jp/link/hsa/pathway\"...\n",
+      "\n",
+      "Reading KEGG annotation online: \"https://rest.kegg.jp/list/pathway/hsa\"...\n",
+      "\n",
+      "'select()' returned 1:1 mapping between keys and columns\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Run the enrichment analysis\n",
     "get_enriched_pathways(input_dir, output_dir)\n",
     "get_enriched_pathways(stage_significant_input_dir, stage_significant_output_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -283,13 +292,7 @@
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
       "\u001b[1mDelimiter:\u001b[22m \"\\t\"\n",
       "\u001b[31mchr\u001b[39m (6): ONTOLOGY, ID, Description, GeneRatio, BgRatio, geneID\n",
-      "\u001b[32mdbl\u001b[39m (4): pvalue, p.adjust, qvalue, Count\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\u001b[32mdbl\u001b[39m (4): pvalue, p.adjust, qvalue, Count\n",
       "\n",
       "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
       "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n",
@@ -316,7 +319,22 @@
      "output_type": "stream",
      "text": [
       " [1] \"ONTOLOGY\"    \"ID\"          \"Description\" \"GeneRatio\"   \"BgRatio\"    \n",
-      " [6] \"pvalue\"      \"p.adjust\"    \"qvalue\"      \"geneID\"      \"Count\"      \n",
+      " [6] \"pvalue\"      \"p.adjust\"    \"qvalue\"      \"geneID\"      \"Count\"      \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“\u001b[1m\u001b[22mThe `size` argument of `element_line()` is deprecated as of ggplot2 3.4.0.\n",
+      "\u001b[36mℹ\u001b[39m Please use the `linewidth` argument instead.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " [1] \"ONTOLOGY\"    \"ID\"          \"Description\" \"GeneRatio\"   \"BgRatio\"    \n",
       " [6] \"pvalue\"      \"p.adjust\"    \"qvalue\"      \"geneID\"      \"Count\"      \n",
       "[1] \"ID\"          \"Description\" \"GeneRatio\"   \"BgRatio\"     \"pvalue\"     \n",
@@ -367,6 +385,7 @@
     }
    ],
    "source": [
+    "# Create barplots of the top 15 enriched pathways\n",
     "create_barplots(output_dir, 4.5, 4.5)\n",
     "create_barplots(stage_significant_output_dir, 4.5, 4.5)"
    ]
@@ -380,7 +399,40 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read the expression data and the clinical data\n",
+    "expr_data <- read.table(\"../data/all/all_phases_all_matrisome_counts.tsv\", header = TRUE, row.names = 1, sep = \"\\t\")\n",
+    "clinical_data <- read.table(\"../data_prep/metadata/stagewise_coldata.tsv\", header = TRUE, sep = \"\\t\")\n",
+    "\n",
+    "# Transpose expr_data to get samples in rows and genes in columns\n",
+    "expr_data <- t(expr_data)\n",
+    "\n",
+    "# Merge the expression data and the clinical data\n",
+    "data <- merge(clinical_data, expr_data, by = \"row.names\", all = TRUE)\n",
+    "rownames(data) <- data$Row.names\n",
+    "data$Row.names <- NULL\n",
+    "\n",
+    "# Get the list of all genes used in the enrichment analysis\n",
+    "all_genes <- get_all_genes_from_pathways(go_results, kegg_results)\n",
+    "\n",
+    "# Calculate ANOVA for each gene\n",
+    "anova_results <- sapply(all_genes, function(gene) {\n",
+    "  if (gene %in% colnames(data)) {\n",
+    "    fit <- aov(as.formula(paste(gene, \"~ phase\")), data = data)\n",
+    "    summary(fit)[[1]][[\"Pr(>F)\"]]  # Extract the p-value\n",
+    "  } else {\n",
+    "    NA  # Return NA for genes not present in the expression data\n",
+    "  }\n",
+    "})\n",
+    "\n",
+    "# Identify genes with significant differences\n",
+    "sig_genes <- names(anova_results)[anova_results < 0.05]\n",
+    "\n",
+    "# Plot these genes\n",
+    "for (gene in sig_genes) {\n",
+    "  plot_gene_expression(data[,c(\"phase\", gene)])  # You need to implement plot_gene_expression\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
